# factorizer

./: package.json
.github/workflows/: action.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
