[package]
name = "factorizer"
version = "0.1.0"
description = "Easily factorizes numbers for you"
authors = ["Nav"]
license = "MIT"
repository = ""
default-run = "factorizer"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = ["api-all"] }
num = "0.4.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
